scripts/nullaway/annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8.txt
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/msc/ElkinItem.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return pseudo;
		^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:20: error: [NullAway] initializer method does not guarantee @NonNull field PrimParent (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AdjList(int nverts) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:94: error: [NullAway] dereferenced expression tempAdjl is @Nullable
	    	for (ALNode q = tempAdjl[index]; q != null; q = q.getProx()) {
	    	                        ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjList.java:109: error: [NullAway] dereferenced expression tempAdjl is @Nullable
    	    p.setProx(tempAdjl[index]);
    	                      ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/dataStructure/AdjMatrix.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields MCPmatrix (line 19), P (line 20), MCPmatrix2Check (line 22), local2CheckAdjList (line 27), localAdjList (line 35) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AdjMatrix (int nverts) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/DSMDStAlgorithm.java:39: error: [NullAway] initializer method does not guarantee @NonNull fields globalAdjl (line 23), uninformedAdjl (line 24), arborescenceSPT (line 37) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public DSMDStAlgorithm(int nsize, double nmprange, int sourceId, int terminalsId[], double delaysTerm[], PositionTable npt, Weight w) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/DSMDStAlgorithm.java:130: error: [NullAway] dereferenced expression arbMatrix is @Nullable
		double[][] P2PCosts = arbMatrix.getP2PCost();
		                               ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/ApproximationAlgorithm.java:285: error: [NullAway] passing @Nullable parameter 'violatedTer' where @NonNull is required
		return getSpannerQuant(violatedTer);
		                       ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:49: error: [NullAway] initializer method does not guarantee @NonNull fields uninformedTerminals (line 30), uninformedTerminalsDelay (line 31), chosenItem (line 35), chosenPseudo (line 36), realChosenPseudo (line 36) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MSCBasedAlgorithm(int nsize, double nmprange, int sourceId,
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:116: error: [NullAway] dereferenced expression D is @Nullable
    	for (int d = 0; d < D.size(); d++) {
    	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/MSCBasedAlgorithm.java:152: error: [NullAway] dereferenced expression minItem is @Nullable
    		realChosenPseudo.add(new PseudoNode(new Node(minItem.getPseudo().getInformed().getId()), new Node(minItem.getPseudo().getUninformed().getId())));
    		                                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url594c007908_hugobraga_College_tgz-pJ8-main_GraphJ8/src/algorithms/SIM.java:37: error: [NullAway] initializer method does not guarantee @NonNull field violatedTerminals (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SIM(int nsize, double nmprange, int sourceId, int[] terminalsId,
	       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
